--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Outdoors at GMU — POC</title>
+  <title>Outdoors at GMU - POC</title>
   <style>
     /* Minimal, beginner-friendly styles */
     :root { --green:#1f5130; --bg:#f7f7f7; }
@@ -23,7 +23,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Outdoors at GMU — simple site POC</h1>
+      <h1>Outdoors at GMU - simple site POC</h1>
     </div>
   </header>
 
@@ -50,7 +50,7 @@
   <script>
     // ====== SUPER TINY POC ======
     // For now, events come from a small JS array.
-    // (Later we can swap this to a Google Sheet fetch.)
+    // (Later can be swapped to a Google Sheet fetch.)
     const EVENTS = [
       { title: "Sunrise Hike — Great Falls", date:"2025-09-14", time:"6:00–8:30 AM", location:"Great Falls Park VA", rsvp:"#"},
       { title: "Shenandoah Day Hike — Little Stony Man", date:"2025-09-21", time:"9:00 AM–3:00 PM", location:"Shenandoah NP", rsvp:"#"},
@@ -96,3 +96,4 @@
   </script>
 </body>
 </html>
+
