--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     // For now, events come from a small JS array.
     // (Later can be swapped to a Google Sheet fetch.)
     const EVENTS = [
-      { title: "Sunrise Hike — Great Falls", date:"2025-09-14", time:"6:00–8:30 AM", location:"Great Falls Park VA", rsvp:"#"},
-      { title: "Shenandoah Day Hike — Little Stony Man", date:"2025-09-21", time:"9:00 AM–3:00 PM", location:"Shenandoah NP", rsvp:"#"},
+      { title: "Sunrise Hike - Great Falls", date:"2025-09-14", time:"6:00–8:30 AM", location:"Great Falls Park VA", rsvp:"#"},
+      { title: "Shenandoah Day Hike - Little Stony Man", date:"2025-09-21", time:"9:00 AM–3:00 PM", location:"Shenandoah NP", rsvp:"#"},
     ];
 
     const list = document.getElementById('eventsList');
@@ -96,4 +96,5 @@
   </script>
 </body>
 </html>
+
 
