--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>We’re a student-run outdoors club. Beginner friendly. Hikes, walks, and the occasional scramble.</p>
         <p>
           <a class="btn" href="#" id="waiverLink">Waiver</a>
-          <a class="btn btn-alt" href="#" id="discordLink">Join Discord</a>
+          <a class="btn btn-alt" href="https://discord.gg/NQ6mweDyvd" id="discordLink">Join Discord</a>
         </p>
       </div>
     </section>
@@ -37,3 +37,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
