--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       <h1>Outdoors at GMU - simple site POC</h1>
     </div>
   </header>
-
+<nav class="nav">
+  <a href="/">Home</a>
+  <a href="/events.html">Events</a>
+  <a href="/about.html">About</a>
+  <a href="/officers.html">Officers</a>
+</nav>
   <main class="container">
     <section id="events">
       <h2>Upcoming Events</h2>
@@ -37,4 +42,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
